--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@providertrust/colors": "^1.0.0",
     "core-js": "^3.6.5",
     "sass": "^1.32.7",
     "sass-loader": "10.1.1",
